--- a/src/app/styles/pages/_home.scss
+++ b/src/app/styles/pages/_home.scss
@@ -10,6 +10,7 @@
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
